# Object-Oriented-Design-Patterns

./: README.md
Observer/: CMakeLists.txt  main.cpp
Observer/include/: weather.hpp
Observer/src/: weather.cpp
Observer/test/: main_gtest.cpp  test_weather.cpp
Singleton/: CMakeLists.txt
Singleton/include/: file.hpp
Singleton/src/: file.cpp
Strategy/: CMakeLists.txt  main.cpp  notes.txt
Strategy/include/: duck.hpp
Strategy/src/: duck.cpp
Strategy/test/: main_gtest.cpp  test_duck.cpp
